@@ -50,18 +50,23 @@
         // Build the Slick.
         t.slick($.extend(configs, globals, callbacks));
 
-        // .slick-active can be as many as visible slides.
+        // Without centerMode, .slick-active can be as many as visible slides.
         // @todo drop when .slick-active has a special class for the current.
         if (t.hasClass('slick--display--thumbnail')) {
-          $('.slick__slide > img', t).on('click.img-current', function () {
+          var $slide = '.slick__slide',
+            curr = t.slickCurrentSlide();
+          $($slide + '[index="' + curr + '"]', t).addClass('slide--current');
+          $($slide + ' img', t).off('click.img-current').on('click.img-current', function () {
             $('.slide--current', t).removeClass('slide--current');
-            $(this).parent().addClass('slide--current');
+            $(this).closest('.slick__slide').addClass('slide--current');
           });
 
-          $('.slick-prev, .slick-next', t).on('click.arrow-current', function () {
+          $('.slick-prev, .slick-next', t).off('click.arrow-current').on('click.arrow-current', function () {
             $('.slide--current', t).removeClass('slide--current');
-            $('.slick__slide[index="' + (t.slickCurrentSlide()) + '"]', t).addClass('slide--current');
+            $($slide + '[index="' + curr + '"]', t).addClass('slide--current');
           });
+
+          // @todo dots sync.
         }
 
         // @todo drop when appendArrows works on resize.
